# Rainfall-detection-using-TinyML

./: .gitignore
tinyml_deployment/: log_of_command
tinyml_deployment/main/: CMakeLists.txt
tinyml_deployment/main/inc/: Constants.h  DataProvider.h  test_sdcard.h
tinyml_deployment/main/src/: DataProvider.cpp  main.cpp  test_sdcard.cpp
